--- a/Shooping-Frontend/src/styles/index.css
+++ b/Shooping-Frontend/src/styles/index.css
@@ -31,24 +31,22 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: larger;
   line-height: 1.1;
 }
 
 button {
+  margin: 2%;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -66,3 +64,49 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/*
+  styles
+*/
+input {
+  width: 100%;
+  font-weight: 500;
+  font-size: medium;
+}
+
+label {
+  width: 100%;
+  text-align: left;
+  font-weight: 600;
+  font-size: medium;
+}
+
+.button-add {
+  background-color: #6370ff;
+}
+
+.button-add:hover {
+  background-color: #7e88ff;
+}
+
+.button-remove {
+  background-color: rgb(180, 128, 128);
+}
+
+.button-remove:hover {
+  background-color: rgb(179, 137, 137);
+}
+
+.inputLabeled {
+  display: grid;
+  margin-bottom: 10%;
+}
+
+.card-form {
+  width: 250px;
+  padding: 20%;
+  border-radius: 5%;
+  background-color: #373737;
+  align-items: center;
+}
+
